# erl_quadrotor_mocap

./: CMakeLists.txt  package.xml
include/erl_quadrotor_mocap/: erl_quadrotor_mocap.hpp  filter.hpp
launch/: crazymocap.launch  erl_quad.launch  optitrack.launch  test.launch
src/: erl_quadrotor_mocap.cpp  filter.cpp
