<?xml version="1.0"?>
<package>
  <name>erl_quadrotor_mocap</name>
  <version>0.0.2</version>
  <description>The erl_quadrotor_mocap package</description>
  <maintainer email="aaltawaitan@ucsd.edu">Abdullah Altawaitan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>vicon</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>vicon</run_depend>
  <run_depend>tf2_ros</run_depend>

</package>
